syntax = "proto3";

option go_package = "github.com/celer-network/sgn-v2/seal"; // sgn event aggregated log

enum TxMsgStatus {
   NULL = 0;
   SENT = 1;
   SUCCEED = 2;
   FAILED = 3;
}

message TransactorLog {
    uint32 msg_num = 1;
    map<string, uint32> msg_type = 2;
    string sender = 3;
    string tx_hash = 4;
    uint32 msgs_id = 5;
    TxMsgStatus status = 6;
    int64 gas_wanted = 7;
    int64 gas_used = 8;

    int64 start_timestamp = 99;
    double execution_time_ms = 100;
    repeated string error = 101;
    repeated string warn = 102;
}

message MsgLog {
    string type = 1;
    Staking staking = 2;
    Govern govern = 3;
    Slash slash = 4;
    Sync sync = 5;

    string sender = 99;
    double execution_time_ms = 100;
    repeated string error = 101;
    repeated string warn = 102;
}

message Staking {
    string val_addr = 1;
    string del_addr = 2;
    string signer = 3;
    string pub_key = 4;
    repeated string transactors = 5;
}

message Slash {
    uint64 nonce = 1;
    string val_addr = 2;
    string reason = 3;
}

message Govern {
    uint64 proposal_id = 1;
    string deposit = 2;
    string option = 3;
}

message Sync {
    repeated Update updates = 1;
}

message Update {
    uint64 id = 1;
    string type = 2;
}

message ChannelInfo {
    string chan_id = 1;
    string peer_from = 2;
    uint64 seq_num = 3;
    string trigger_tx_hash = 4;
    string guard_tx_hash = 5;
    repeated string guards = 6;
    uint32 guard_index = 7;
    uint64 trigger_blknum = 8;
    uint64 guard_blknum = 9;
}